# pybrgmlib

./: LICENSE  README.md  requirements.txt  setup.cfg
src/: aquifr.py  bhydro2.py  cloneades.py  drias2020.py  era5.py  gis.py  meteobrgm.py  stats.py
src/drias2020/: __init__.py  convert_drias2020.py  extract_drias2020.py
src/explore2/: __init__.py  convert_surfex_explore2.py  read_surfex_explore2.py  write_to_file.f90
src/meteobrgm/: __init__.py  coord_9892  pymeteobrgm.py
tests/: test_era5_land.py  test_era5_singlelevel.py
