[metadata]
name = pybrgmlib
version = 0.0.1
author = Jean-Pierre Vergnes
author_email = jp.vergnes@brgm.fr
description = Python package
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language :: Python : 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.5

[options.packages.find]
where = src
